<resources>
    <string name="app_name">Memory</string>
    <string name="create_diary">Create New Diary</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="delete">Delete</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signout">Sign Out</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="enterTitle">Enter Title</string>
    <string name="textViewSignIn">Already Registered? Sign In Here</string>
    <string name="textViewSignUp">Not Have An Account? Sign Up Here</string>
    <string name="reenter">Re-enter Password</string>
    <string name="title_activity_list_diary">Memory</string>
    <string name="title_activity_read_diary">Read Diary</string>
    <string name="title_activity_edit_diary">Edit Diary</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="preferences">Preferences</string>

</resources>
