<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="gui.yst.photodiary.activities.CreateDiary">
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:onClick="setting"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/signout"
        android:onClick="logout"
        app:showAsAction="never" />
</menu>
