<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_email_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gui.yst.photodiary.login.EmailRegister">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailRegister"
        android:hint="@string/email"
        android:layout_alignBottom="@+id/passwordRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSignIn"
        android:text="@string/textViewSignIn"
        android:textColor="#FFFFFF"
        android:onClick="signInActivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_below="@+id/buttonRegister"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="registerUser"
        android:theme="@style/AppTheme.Button"
        android:id="@+id/buttonRegister"
        android:layout_below="@+id/emailRegister"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reEnterPassword"
        android:hint="@string/reenter"
        android:layout_marginBottom="134dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/passwordRegister" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordRegister"
        android:hint="@string/password"
        android:layout_above="@+id/reEnterPassword"
        android:layout_alignStart="@+id/emailRegister"
        android:layout_marginBottom="11dp" />
</RelativeLayout>
