<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_email_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gui.yst.photodiary.login.EmailLogin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailLogin"
        android:hint="@string/email"
        android:layout_alignBottom="@+id/passwordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLogin"
        android:layout_centerHorizontal="true"
        android:onClick="userLogin"
        android:layout_marginTop="17dp"
        android:theme="@style/AppTheme.Button"
        android:id="@+id/buttonRegister" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordLogin"
        android:hint="@string/password"
        android:layout_marginBottom="134dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/emailLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSignUp"
        android:text="@string/textViewSignUp"
        android:textColor="#FFFFFF"
        android:onClick="signUpActivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_below="@+id/buttonRegister"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
