<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_create_diary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gui.yst.photodiary.activities.CreateDiary"
    tools:showIn="@layout/activity_create_diary">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="9"
        android:id="@+id/diaryTitle"
        android:hint="@string/enterTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="120dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_height="150dp"
        android:id="@+id/photo"
        android:layout_above="@+id/content"
        android:layout_alignStart="@+id/frame"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/frame"
        android:id="@+id/frame"
        android:scaleType="centerCrop"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/timepickerText"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/content"
        android:layout_below="@+id/timepickerText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:layout_alignEnd="@+id/photo" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:onClick="saveButtonPressed"
        android:layout_marginEnd="41dp"
        android:theme="@style/AppTheme.Button"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/cancel" />

    <Button
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clearButtonPressed"
        android:id="@+id/cancel"
        android:theme="@style/AppTheme.Button"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/datepickerText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="7"
        android:onClick="timepickerTextPressed"
        android:focusable="false"
        android:id="@+id/timepickerText"
        android:layout_marginTop="13dp"
        android:hint="@string/time"
        android:layout_below="@+id/datepickerText"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/cancel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="7"
        android:onClick="datepickerTextPressed"
        android:focusable="false"
        android:id="@+id/datepickerText"
        android:layout_marginTop="15dp"
        android:hint="@string/date"
        android:layout_below="@+id/diaryTitle"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/diaryTitle" />

</RelativeLayout>
